<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3.0取流播放Demo</string>
    <string name="action_settings">Settings</string>

    <string name="username_hint">Input username</string>
    <string name="passwd_hint">Input password</string>
    <string name="login_btn_txt">Login</string>
    <string name="auto_login_chk_txt">Auto Login</string>
    <string name="fetch_linelist_failed">Fetching line list failed.</string>
    <string name="login_failed">Login failed,%s</string>
    <string name="fetch_reslist_failed">Fetching resource list failed,%s</string>
    <string name="server_setting">Server Setting</string>
    <string name="server_setting_hint">Input a server address</string>
    <string name="save">Save</string>
    <string name="serveraddr_empty_tip">Server is empty !</string>
    <string name="line_unavailable">No available line,please click button to fetch line list!</string>

    <string name="getline_suc_tip">Getting line success!</string>
    <string name="getline_fail_tip">Getting line failed,%s</string>
    <string name="login_suc_tip">Login success!</string>
    <string name="fetchline_process_tip">Fetching line list...</string>
    <string name="login_process_tip">Logging in process...</string>
    <string name="no_data_tip">No data.</string>
    <string name="fetch_resource_suc">Fetching resource success!</string>

    <string name="cloud_ctrl">Cloud Platform Control </string>
    <string name="start_ctrl">Start 云台control </string>
    <string name="stop_ctrl">Stop 云台control </string>
    <string name="stream_choose">Choose a stream</string>
    <string name="fetch_line">Fetch line</string>
</resources>
