<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/server_addr_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_setting_hint" />

        <RelativeLayout
            android:id="@+id/lineArea"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/server_addr_et" >

            <Spinner
                android:id="@+id/lineSpinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp" 
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/fetchLineBtn"
                />

            <Button
                android:id="@+id/fetchLineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetch_line" 
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineArea"
            android:hint="@string/username_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:hint="@string/passwd_hint"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwd" >

            <CheckBox
                android:id="@+id/autologin_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:text="@string/auto_login_chk_txt" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:text="@string/login_btn_txt" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:text="Version:Build2015-01-26" />

</RelativeLayout>